# gnome-i18n

./: ChangeLog  allpo.pl  desk.pl  genreport-april.pl  genreport-new.pl  genreport.pl  gnome-i18n.doap  potfile.sh  translate-gnome.sgml  update.pl
UTF-8/: README  potoutf.sh  utftopo.sh
da/: ChangeLog  Forkortelser  GNU-SHORT  HOWTO-learnDanish  HvadErFuzzy  KendteBegynderFejl  Ordliste
de/: ChangeLog  GNU-SHORT  gnome-2002.pdf.bz2  gnome-2002.ps.bz2
el/: ChangeLog  Comments.txt  Po2WfmMemoryTXT.pl  README.glossary.tool  tcshrc.aliases  xml-i18n-glossary-tool.pl
en_GB/: ChangeLog  README.md  en_GB.pl
es/: ChangeLog  memoria.po  potfile-es.sh  translate-gnome-es.sgml
eu/: ChangeLog  translate-gnome-eu.sgml  translate-gnome-eu.xml
extra-po/: README
glossary/: .cvsignore  ChangeLog  GnomeGlossary.csv  GnomeGlossary.gnumeric  README  README.glossary.tool  am.po  ar.po  az.po  ca.po  cs.po  csv-to-pot.sh  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fy.po  glossary.list  glossary.pot  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lv.po  ml.po  ms.po  nl.po  nn.po  (+21 more)
l10n-style-guides/: C.tar.bz2  ChangeLog  de.tar.bz2  es.tar.bz2  fr.tar.bz2  it.tar.bz2  ja.tar.bz2  ko.tar.bz2  sv.tar.bz2  zh_CN.tar.bz2  zh_TW.tar.bz2
nl/: ChangeLog  GPL  GPL-SHORT  legal.po
no/: ordliste.html
process-translation/: .process-translation.conf  AUTHORS  ChangeLog  FAQ  fetch-translation  process-translation
redhat-po/: INFO  pack.sh
ro/: ChangeLog  Xmodmap.ro  coduri.txt  dictionar.txt  index.html  rom  sugestii.txt  target.txt
spellutils/: FILES  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  exec.c  header.c  lib.c  lib.h  newsbody.1  newsbody.c  newsbody.h  newsbody_read.c  newsbody_write.c  pospell.1  pospell.c  pospell.h  pospell_read.c  pospell_write.c  strncasecmp.c  strncasecmp.h
spellutils/po/: POTFILES.in  cat-id-tbl.c  spellutils.pot
status/: .cvsignore  AUTHORS  ChangeLog  LANGINFO.in  Makefile.am  README  STATUSFILES.in  autogen.sh  configure.ac  cvs-download.pl  genhtml-apps.pl  genhtml-keld.pl  genhtml-kenneth.pl  genhtml-pango.pl  genhtml-release.pl  genhtml.pl  package.pl  run.sh  start.sh  status-apps.pl  status-keld.pl  status-kenneth.pl  status-pango.pl  status-release-rasta.pl  status-release.pl  status.pl  status2.pl  translation-status-extra.xml  translation-status.dtd  translation-status.xml
status/data/: ChangeLog  Makefile.am  gtp.css  ignored-lang-list  new-release.py  status-gnome.xml  translation-status.dtd  translation-status.xml
status/data/templates/: main-banner.template  main-footer.template  main-header.template
status/doc/: Design  Makefile.am
status/doc-l10n-status/: ChangeLog  doc-l10n-status.py  l10n_config.py  modules.xml
status/old/: .cvsignore  ChangeLog  RELENG.in  cvs-up-status.pl  genhtml-apps.pl  genhtml-kenneth.pl  genhtml-pango.pl  genhtml-release.pl  package.pl  status-apps.pl  status-keld.pl  status-pango.pl  status2.pl
status/po/: .cvsignore
status/src/: .cvsignore  Makefile.am  compile.sh  html-reports.c  main.c  po-management.c  status-module.c  status-module.h  status-server.c  status-server.h  status-team.c  status-team.h  status-translation.c  status-translation.h  status-translator.c  status-translator.h  status-version.c  status-version.h  status-view.c  status-view.h  status-web.c  status-xml.c  status.c  status.h  xml-parser.c
(+1899 files in other folders)
