dnl Process this file with autoconf to produce a configure script.
AC_INIT(pospell.c)
AM_INIT_AUTOMAKE(spellutils, 0.7)
AM_CONFIG_HEADER(config.h)

dnl Set of available languages.
ALL_LINGUAS="da"

dnl Checks for programs
AC_PROG_CC
if test "$ac_cv_prog_gcc" = yes ; then
	CFLAGS="-Wall -pedantic $CFLAGS"
fi
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_PID_T

dnl internationalization macros
AM_GNU_GETTEXT
if test "x$prefix" != xNONE; then
	LOCALEDIR=$prefix/share/locale
else
	LOCALEDIR=$ac_default_prefix/share/locale
fi
AC_DEFINE_UNQUOTED(LOCALEDIR, "$LOCALEDIR")
			
dnl Checks for library functions.
AC_CHECK_FUNCS(strerror strsignal)
AC_REPLACE_FUNCS(getopt)
AC_CHECK_FUNC(strncasecmp,
  [AC_DEFINE(HAVE_STRNCASECMP)], [newsbody_LIBOJS=strncasecmp.o])
AC_SUBST(LIBOBJS)
AC_SUBST(newsbody_LIBOBJS)

AC_OUTPUT(Makefile intl/Makefile po/Makefile.in)
